--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500;700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css?v=20250107-2">
 </head>
 <body class="antialiased">
 
@@ -495,8 +495,8 @@
                 const hasCardImage = article.cardImage && article.cardImage.trim() !== '';
                 const displayImage = hasCardImage ? article.cardImage : null;
 
-                // Check if displaying Pebblous logo
-                const isPebblousLogo = displayImage && displayImage.includes('Pebblous_BM');
+                // Check if displaying Pebblous logo (both orange and black variants)
+                const isPebblousLogo = displayImage && (displayImage.includes('Pebblous_BM_Orange_RGB') || displayImage.includes('Pebblous_BM_Black_RGB'));
 
                 // Featured badge - inline with date
                 const featuredBadge = isFeatured
@@ -507,7 +507,10 @@
                     ? isPebblousLogo
                         ? `<div class="relative w-full h-48 overflow-hidden bg-slate-800 flex items-end justify-end p-4">
                             <img src="${displayImage}" alt="${article.title}"
-                                 class="w-auto h-6 object-contain"
+                                 class="default-logo"
+                                 style="transform-origin: right bottom; transition: width 800ms cubic-bezier(0.4, 0.0, 0.2, 1), transform 800ms cubic-bezier(0.4, 0.0, 0.2, 1);"
+                                 data-gray-logo="https://pebblous.github.io/image/Pebblous_BM_Black_RGB.png"
+                                 data-orange-logo="https://pebblous.github.io/image/Pebblous_BM_Orange_RGB.png"
                                  loading="lazy">
                            </div>`
                         : `<div class="relative w-full h-48 overflow-hidden bg-slate-900 group/img">
@@ -517,8 +520,11 @@
                                  loading="lazy">
                            </div>`
                     : `<div class="relative w-full h-48 overflow-hidden bg-slate-800 flex items-end justify-end p-4">
-                        <img src="https://pebblous.github.io/image/Pebblous_BM_Orange_RGB.png" alt="Pebblous Logo"
-                             class="w-auto h-6 object-contain"
+                        <img src="https://pebblous.github.io/image/Pebblous_BM_Black_RGB.png" alt="Pebblous Logo"
+                             class="default-logo"
+                             style="transform-origin: right bottom; transition: width 800ms cubic-bezier(0.4, 0.0, 0.2, 1), transform 800ms cubic-bezier(0.4, 0.0, 0.2, 1);"
+                             data-gray-logo="https://pebblous.github.io/image/Pebblous_BM_Black_RGB.png"
+                             data-orange-logo="https://pebblous.github.io/image/Pebblous_BM_Orange_RGB.png"
                              loading="lazy">
                        </div>`;
 
@@ -762,7 +768,7 @@
                     fadeInObserver.observe(card);
                 }
 
-                // Tags scroll functionality with gradient indicators
+                // Tags scroll functionality - hover-based with slow smooth animation
                 const container = card.querySelector('.tags-container');
                 const scroll = card.querySelector('.tags-scroll');
 
@@ -776,9 +782,14 @@
                         // Add scrollable class to enable gradients
                         container.classList.add('scrollable');
 
+                        // Calculate duration based on distance for consistent speed
+                        // Speed: approximately 50px per second for smooth, readable scrolling
+                        const scrollSpeed = 50; // pixels per second
+                        const scrollDuration = (scrollDistance / scrollSpeed) * 1000; // in milliseconds
+
                         card.addEventListener('mouseenter', function onMouseEnter() {
                             scroll.style.transform = `translateX(-${scrollDistance}px)`;
-                            scroll.style.transition = 'transform 2s ease-out';
+                            scroll.style.transition = `transform ${scrollDuration}ms linear`;
 
                             // Add scrolled class to show left gradient
                             setTimeout(() => {
@@ -790,7 +801,7 @@
 
                         card.addEventListener('mouseleave', function onMouseLeave() {
                             scroll.style.transform = 'translateX(0)';
-                            scroll.style.transition = 'transform 1.5s ease-out';
+                            scroll.style.transition = `transform ${scrollDuration * 0.7}ms linear`;
 
                             // Remove scrolled class when returning to start
                             setTimeout(() => {
@@ -859,6 +870,30 @@
                             img.src = staticSrc;
                         }
                     }, { passive: true });
+                }
+
+                // Default logo hover functionality (grayscale to orange + size increase)
+                const defaultLogo = card.querySelector('.default-logo');
+                if (defaultLogo) {
+                    const grayLogo = defaultLogo.dataset.grayLogo;
+                    const orangeLogo = defaultLogo.dataset.orangeLogo;
+
+                    // Set initial size (50% of card width)
+                    defaultLogo.style.width = '50%';
+                    defaultLogo.style.height = 'auto';
+                    defaultLogo.style.objectFit = 'contain';
+
+                    if (grayLogo && orangeLogo) {
+                        card.addEventListener('mouseenter', function onLogoHover() {
+                            defaultLogo.src = orangeLogo;
+                            defaultLogo.style.width = '66.666%'; // 2/3 of card width
+                        });
+
+                        card.addEventListener('mouseleave', function onLogoLeave() {
+                            defaultLogo.src = grayLogo;
+                            defaultLogo.style.width = '50%';
+                        });
+                    }
                 }
             });
         }
