--- a/project/CURK/ontology/palantir-vs-classic-ontology.html
+++ b/project/CURK/ontology/palantir-vs-classic-ontology.html
@@ -719,7 +719,7 @@
     <nav class="border-b border-slate-700 bg-slate-900/50 backdrop-blur-sm sticky top-0 z-50">
         <div class="container mx-auto px-4 sm:px-6 lg:px-8 py-4">
             <div class="flex justify-between items-center">
-                <a href="https://blog.pebblous.ai" class="flex items-center space-x-2 hover:opacity-80 transition-opacity">
+                <a href="/index.html" class="flex items-center space-x-2 hover:opacity-80 transition-opacity">
                     <img id="page-logo" src="" alt="Pebblous Logo" class="h-8 md:h-10 w-auto object-contain max-w-full">
                 </a>
                 <div id="theme-switcher" class="flex items-center space-x-2 border border-slate-600 rounded-full p-1">
