--- a/project/PhysicalAI/data-pipeline-for-physical-ai-01.html
+++ b/project/PhysicalAI/data-pipeline-for-physical-ai-01.html
@@ -433,6 +433,91 @@
             border-color: var(--accent-color) !important;
             font-weight: 500;
         }
+
+        /* Share Buttons */
+        .share-container {
+            display: flex;
+            gap: 1rem;
+            align-items: center;
+            justify-content: center;
+            flex-wrap: wrap;
+        }
+        .share-label {
+            font-size: 0.875rem;
+            color: #94a3b8;
+            font-weight: 500;
+        }
+        .share-btn {
+            display: inline-flex;
+            align-items: center;
+            gap: 0.375rem;
+            padding: 0;
+            background: none;
+            border: none;
+            color: #64748b;
+            cursor: pointer;
+            transition: color 0.2s;
+            font-size: 0.875rem;
+        }
+        .share-btn svg {
+            width: 1.25rem;
+            height: 1.25rem;
+            transition: transform 0.2s;
+        }
+        .share-btn:hover {
+            color: #F86825;
+        }
+        .share-btn:hover svg {
+            transform: scale(1.1);
+        }
+
+        /* Footer Styles */
+        .pebblous-footer {
+            position: relative;
+            padding-top: 2rem;
+        }
+
+        .pebblous-footer::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 80px;
+            height: 2px;
+            background: linear-gradient(90deg, transparent, #F86825 20%, #F86825 80%, transparent);
+            opacity: 0.4;
+            z-index: 1;
+        }
+
+        .footer-link {
+            color: #94a3b8;
+            transition: all 0.3s ease;
+            text-decoration: none !important;
+            position: relative;
+            display: inline-block;
+            padding-bottom: 3px;
+        }
+
+        .footer-link::after {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            width: 0;
+            height: 2px;
+            background-color: #F86825;
+            transition: width 0.3s ease;
+        }
+
+        .footer-link:hover {
+            color: #F86825 !important;
+        }
+
+        .footer-link:hover::after {
+            width: 100%;
+        }
     </style>
 </head>
 <body class="antialiased">
@@ -472,10 +557,40 @@
                 Physical AI 시대의 도래:<br>제조 혁신을 위한 데이터 전략
             </h1>
             <p class="text-xl themeable-muted mb-4">AI-Ready Data를 통한 글로벌 제조 경쟁력 확보 방안</p>
-            <div class="flex justify-center items-center gap-4 text-sm themeable-muted">
+
+            <!-- 발행 정보 -->
+            <div class="flex flex-wrap justify-center items-center gap-2 text-sm text-slate-400 mb-8">
                 <span>작성일: 2025년 11월 6일</span>
-                <span>|</span>
-                <span>기획: (주)페블러스 데이터 커뮤니케이션 팀</span>
+                <span class="text-slate-600">|</span>
+                <span>기획: <a href="mailto:contact@pebblous.ai">(주)페블러스 데이터 커뮤니케이션 팀</a></span>
+                <span class="text-slate-600">|</span>
+                <span>읽는 시간: 약 15분</span>
+            </div>
+
+            <!-- 공유하기 -->
+            <div class="share-container mb-8">
+                <span class="share-label">공유하기:</span>
+                <button id="copy-url-btn" class="share-btn" title="URL 복사">
+                    <svg fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 16H6a2 2 0 01-2-2V6a2 2 0 012-2h8a2 2 0 012 2v2m-6 12h8a2 2 0 002-2v-8a2 2 0 00-2-2h-8a2 2 0 00-2 2v8a2 2 0 002 2z"></path>
+                    </svg>
+                    <span>URL</span>
+                </button>
+                <button id="share-twitter-btn" class="share-btn" title="Twitter에 공유">
+                    <svg fill="currentColor" viewBox="0 0 24 24">
+                        <path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z"></path>
+                    </svg>
+                </button>
+                <button id="share-facebook-btn" class="share-btn" title="Facebook에 공유">
+                    <svg fill="currentColor" viewBox="0 0 24 24">
+                        <path d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z"></path>
+                    </svg>
+                </button>
+                <button id="share-linkedin-btn" class="share-btn" title="LinkedIn에 공유">
+                    <svg fill="currentColor" viewBox="0 0 24 24">
+                        <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"></path>
+                    </svg>
+                </button>
             </div>
         </header>
 
@@ -996,10 +1111,10 @@
                     </p>
 
                     <div class="flex flex-col sm:flex-row gap-4 justify-center items-center">
-                        <a href="https://www.pebblous.ai/contact"
+                        <a href="https://dataclinic.ai/ko/request"
                            class="px-8 py-4 rounded-lg font-bold text-white transition-all hover:scale-105"
                            style="background: linear-gradient(135deg, #F86825, #FF8C42);">
-                            무료 상담 신청하기
+                            상담 신청하기
                         </a>
                         <a href="mailto:contact@pebblous.ai"
                            class="px-8 py-4 themeable-card rounded-lg font-bold themeable-heading transition-all hover:scale-105">
@@ -1258,6 +1373,47 @@
                     }
                 });
             }
+        });
+
+        // ===== Share Buttons =====
+        const pageUrl = window.location.href;
+        const pageTitle = document.getElementById('page-title').textContent;
+        const pageDescription = document.getElementById('meta-description').content;
+
+        // URL 복사
+        document.getElementById('copy-url-btn').addEventListener('click', async function() {
+            try {
+                await navigator.clipboard.writeText(pageUrl);
+                const btn = this;
+                const originalText = btn.querySelector('span').textContent;
+                btn.querySelector('span').textContent = '복사됨!';
+                btn.style.color = '#F86825';
+
+                setTimeout(() => {
+                    btn.querySelector('span').textContent = originalText;
+                    btn.style.color = '';
+                }, 2000);
+            } catch (err) {
+                console.error('URL 복사 실패:', err);
+            }
+        });
+
+        // Twitter 공유
+        document.getElementById('share-twitter-btn').addEventListener('click', function() {
+            const twitterUrl = `https://twitter.com/intent/tweet?url=${encodeURIComponent(pageUrl)}&text=${encodeURIComponent(pageTitle)}`;
+            window.open(twitterUrl, '_blank', 'width=550,height=420');
+        });
+
+        // Facebook 공유
+        document.getElementById('share-facebook-btn').addEventListener('click', function() {
+            const facebookUrl = `https://www.facebook.com/sharer/sharer.php?u=${encodeURIComponent(pageUrl)}`;
+            window.open(facebookUrl, '_blank', 'width=550,height=420');
+        });
+
+        // LinkedIn 공유
+        document.getElementById('share-linkedin-btn').addEventListener('click', function() {
+            const linkedinUrl = `https://www.linkedin.com/sharing/share-offsite/?url=${encodeURIComponent(pageUrl)}`;
+            window.open(linkedinUrl, '_blank', 'width=550,height=420');
         });
     </script>
 </body>
