--- a/project/CURK/ontology/iso5259-ontology-extraction.html
+++ b/project/CURK/ontology/iso5259-ontology-extraction.html
@@ -345,16 +345,14 @@
             top: 1rem;
             width: 280px;
             height: calc(100vh - 2rem);
-            background: rgba(15, 23, 42, 0.85);
+            background: rgba(15, 23, 42, 0.95);
             border: 1px solid rgba(148, 163, 184, 0.2);
             border-radius: 0.75rem;
             padding: 1.5rem 1rem;
             overflow-y: auto;
-            z-index: 1000;
+            z-index: 50;
             transform: translateX(-100%);
             transition: transform 0.3s ease;
-            backdrop-filter: blur(12px);
-            -webkit-backdrop-filter: blur(12px);
             box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
         }
         #toc-sidebar.open {
@@ -384,7 +382,7 @@
             border: none;
             border-radius: 0.5rem;
             cursor: pointer;
-            z-index: 999;
+            z-index: 40;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -570,7 +568,7 @@
             width: 0%;
             height: 3px;
             background: linear-gradient(90deg, #F86825, #14b8a6);
-            z-index: 9999;
+            z-index: 60;
             transition: width 0.1s ease;
         }
 
@@ -665,33 +663,95 @@
             border-bottom: 2px solid #F86825;
         }
 
-        /* Footer Styles */
+        /* Footer Styles - Dark Theme */
         .pebblous-footer {
+            background-color: #0f172a;
+            color: #94a3b8;
+            position: relative;
+            padding-top: 2rem;
             font-family: 'Pretendard', -apple-system, BlinkMacSystemFont, system-ui, Roboto, 'Helvetica Neue', 'Segoe UI', sans-serif;
         }
 
+        /* Short horizontal bar at the top */
+        .pebblous-footer::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 80px;
+            height: 2px;
+            background: linear-gradient(90deg, transparent, #F86825 20%, #F86825 80%, transparent);
+            opacity: 0.4;
+            z-index: 1;
+        }
+
+        .footer-border {
+            border-top: none;
+        }
+
+        .footer-heading {
+            color: #e2e8f0;
+        }
+
+        .footer-text {
+            color: #94a3b8;
+        }
+
+        .footer-link {
+            color: #94a3b8;
+            transition: all 0.3s ease;
+            text-decoration: none !important;
+            border-bottom: none !important;
+            position: relative;
+            display: inline-block;
+            padding-bottom: 3px;
+        }
+
+        .footer-link::after {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 0;
+            height: 2px;
+            background-color: #F86825;
+            transition: width 0.3s ease;
+        }
+
+        .footer-link:hover {
+            color: #F86825 !important;
+        }
+
+        .footer-link:hover::after {
+            width: 100%;
+        }
+
+        .footer-divider {
+            border-top: 1px solid #1e293b;
+        }
+
+        .footer-social-icon {
+            color: #64748b;
+            transition: color 0.2s;
+        }
+
+        .footer-social-icon:hover {
+            color: #e2e8f0;
+        }
+
         .pebblous-footer ul {
-            line-height: 1.6; /* Reduced from default space-y-3 */
+            line-height: 1.6;
         }
 
         .pebblous-footer li {
-            margin-bottom: 0.5rem; /* Tighter spacing */
+            margin-bottom: 0.5rem;
         }
 
         .pebblous-footer sup {
-            font-size: 0.65em; /* Increased from default ~0.55em */
+            font-size: 0.65em;
             vertical-align: super;
             line-height: 0;
-        }
-
-        /* Footer links - no underline, just color change */
-        .footer-link {
-            border-bottom: none !important;
-            color: #94a3b8;
-            transition: color 0.2s;
-        }
-        .footer-link:hover {
-            color: #F86825;
         }
 
         /* Mobile responsive */
@@ -794,13 +854,28 @@
             border-top: 1px solid #334155;
             margin: 2rem 0;
         }
+
     </style>
 </head>
-<body class="pt-20 px-4 sm:px-6 lg:px-8 pb-4">
+<body class="px-4 sm:px-6 lg:px-8 pb-4">
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-57L9F58B"
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
+
+    <!-- Header -->
+    <nav class="bg-slate-950 border-b border-slate-800 py-3 mb-8">
+        <div class="container-custom mx-auto">
+            <div class="flex items-center justify-between">
+                <a href="/index.html">
+                    <img src="/image/Pebblous_BM_Orange_RGB.png" alt="Pebblous Logo" class="h-6 w-auto object-contain">
+                </a>
+                <a href="/index.html" class="text-sm text-slate-400 hover:text-orange-500 transition-colors">
+                    ← 블로그 홈
+                </a>
+            </div>
+        </div>
+    </nav>
 
     <!-- Progress Bar -->
     <div id="progress-bar"></div>
@@ -852,20 +927,6 @@
             </div>
         </div>
     </div>
-
-    <!-- Fixed Header with Logo -->
-    <nav class="fixed top-0 left-0 right-0 z-50 bg-slate-950/95 backdrop-blur-sm border-b border-slate-800">
-        <div class="container-custom mx-auto px-4 sm:px-6 lg:px-8 py-3">
-            <div class="flex items-center justify-between">
-                <a href="https://pebblous.ai" target="_blank" rel="noopener noreferrer">
-                    <img src="/image/Pebblous_BM_Orange_RGB.png" alt="Pebblous Logo" class="h-6 w-auto object-contain">
-                </a>
-                <a href="/index.html" class="text-sm text-slate-400 hover:text-white transition-colors">
-                    ← 블로그 홈
-                </a>
-            </div>
-        </div>
-    </nav>
 
     <div class="container-custom">
         <!-- Header -->
