--- a/project/CURK/ontology/palantir-vs-classic-ontology.html
+++ b/project/CURK/ontology/palantir-vs-classic-ontology.html
@@ -702,6 +702,82 @@
             transition: height 0.1s ease-out;
         }
 
+        /* Footer Styles - Dark Theme */
+        .pebblous-footer {
+            background-color: #0f172a;
+            color: #94a3b8;
+            position: relative;
+            padding-top: 2rem;
+        }
+
+        /* Short horizontal bar at the top */
+        .pebblous-footer::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 80px;
+            height: 2px;
+            background: linear-gradient(90deg, transparent, #F86825 20%, #F86825 80%, transparent);
+            opacity: 0.4;
+            z-index: 1;
+        }
+
+        .footer-border {
+            border-top: none;
+        }
+
+        .footer-heading {
+            color: #e2e8f0;
+        }
+
+        .footer-text {
+            color: #94a3b8;
+        }
+
+        .footer-link {
+            color: #94a3b8;
+            transition: all 0.3s ease;
+            text-decoration: none !important;
+            border-bottom: none !important;
+            position: relative;
+            display: inline-block;
+            padding-bottom: 3px;
+        }
+
+        .footer-link::after {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 0;
+            height: 2px;
+            background-color: #F86825;
+            transition: width 0.3s ease;
+        }
+
+        .footer-link:hover {
+            color: #F86825 !important;
+        }
+
+        .footer-link:hover::after {
+            width: 100%;
+        }
+
+        .footer-divider {
+            border-top: 1px solid #1e293b;
+        }
+
+        .footer-social-icon {
+            color: #64748b;
+            transition: color 0.2s;
+        }
+
+        .footer-social-icon:hover {
+            color: #e2e8f0;
+        }
+
     </style>
 </head>
 <body class="antialiased">
@@ -715,18 +791,8 @@
         <div id="scrollProgressBar"></div>
     </div>
 
-    <!-- Header Navigation -->
-    <nav class="border-b border-slate-700 bg-slate-900/50 backdrop-blur-sm sticky top-0 z-50">
-        <div class="container mx-auto px-4 sm:px-6 lg:px-8 py-4">
-            <div class="flex justify-between items-center">
-                <a href="/index.html" class="flex items-center space-x-2 hover:opacity-80 transition-opacity">
-                    <img id="page-logo" src="" alt="Pebblous Logo" class="h-8 md:h-10 w-auto object-contain max-w-full">
-                </a>
-                <div id="theme-switcher" class="flex items-center space-x-2 border border-slate-600 rounded-full p-1">
-                </div>
-            </div>
-        </div>
-    </nav>
+    <!-- Header Component Placeholder -->
+    <div id="header-placeholder"></div>
 
     <div id="app" class="container mx-auto px-4 sm:px-6 lg:px-8 py-8 md:py-12">
 
@@ -1142,13 +1208,17 @@
     <div id="footer-placeholder"></div>
 
     <script>
-        // Load footer component
-        fetch('/components/footer.html')
-            .then(response => response.text())
-            .then(data => {
-                document.getElementById('footer-placeholder').innerHTML = data;
-            })
-            .catch(error => console.error('Error loading footer:', error));
+        // Load header and footer components
+        Promise.all([
+            fetch('/components/header.html').then(response => response.text()),
+            fetch('/components/footer.html').then(response => response.text())
+        ]).then(([headerHTML, footerHTML]) => {
+            document.getElementById('header-placeholder').innerHTML = headerHTML;
+            document.getElementById('footer-placeholder').innerHTML = footerHTML;
+
+            // Dispatch custom event when components are loaded
+            window.dispatchEvent(new Event('componentsLoaded'));
+        }).catch(error => console.error('Error loading components:', error));
     </script>
 
     <script>
@@ -1165,7 +1235,13 @@
                 }
             }
         }
-        document.addEventListener('DOMContentLoaded', function() {
+        // Wait for both DOM and components to be ready
+        let domReady = false;
+        let componentsReady = false;
+
+        function initializeApp() {
+            if (!domReady || !componentsReady) return;
+
 		const siteConfig = {
 		    siteURL: "https://blog.pebblous.ai",
 		    pagePath: "/project/CURK/ontology/palantir-vs-classic-ontology.html",
@@ -1494,6 +1570,16 @@
                 window.addEventListener('scroll', updateScrollProgress);
                 updateScrollProgress(); // Initialize on load
             }
+        }
+
+        document.addEventListener('DOMContentLoaded', function() {
+            domReady = true;
+            initializeApp();
+        });
+
+        window.addEventListener('componentsLoaded', function() {
+            componentsReady = true;
+            initializeApp();
         });
     </script>
 </body>
