--- a/project/ISO5259/5259_text_qa.html
+++ b/project/ISO5259/5259_text_qa.html
@@ -132,6 +132,82 @@
         main table tbody tr { border-bottom-width: 1px; }
         main strong { font-weight: 700; color: var(--themeable-heading-color); }
         .themeable-subtitle { color: var(--themeable-text-color); }
+
+        /* Footer Styles - Dark Theme */
+        .pebblous-footer {
+            background-color: #0f172a;
+            color: #94a3b8;
+            position: relative;
+            padding-top: 2rem;
+        }
+
+        /* Short horizontal bar at the top */
+        .pebblous-footer::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 80px;
+            height: 2px;
+            background: linear-gradient(90deg, transparent, #F86825 20%, #F86825 80%, transparent);
+            opacity: 0.4;
+            z-index: 1;
+        }
+
+        .footer-border {
+            border-top: none;
+        }
+
+        .footer-heading {
+            color: #e2e8f0;
+        }
+
+        .footer-text {
+            color: #94a3b8;
+        }
+
+        .footer-link {
+            color: #94a3b8;
+            transition: all 0.3s ease;
+            text-decoration: none !important;
+            border-bottom: none !important;
+            position: relative;
+            display: inline-block;
+            padding-bottom: 3px;
+        }
+
+        .footer-link::after {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 0;
+            height: 2px;
+            background-color: #F86825;
+            transition: width 0.3s ease;
+        }
+
+        .footer-link:hover {
+            color: #F86825 !important;
+        }
+
+        .footer-link:hover::after {
+            width: 100%;
+        }
+
+        .footer-divider {
+            border-top: 1px solid #1e293b;
+        }
+
+        .footer-social-icon {
+            color: #64748b;
+            transition: color 0.2s;
+        }
+
+        .footer-social-icon:hover {
+            color: #e2e8f0;
+        }
     </style>
 </head>
 <body class="antialiased">
