--- a/project/PhysicalAI/data-pipeline-for-physical-ai-01.html
+++ b/project/PhysicalAI/data-pipeline-for-physical-ai-01.html
@@ -494,6 +494,7 @@
             color: #94a3b8;
             transition: all 0.3s ease;
             text-decoration: none !important;
+            border-bottom: none !important;
             position: relative;
             display: inline-block;
             padding-bottom: 3px;
@@ -504,7 +505,6 @@
             position: absolute;
             bottom: 0;
             left: 0;
-            right: 0;
             width: 0;
             height: 2px;
             background-color: #F86825;
