--- a/report/llm-dataset-guide-2025-10-16/ko/index.html
+++ b/report/llm-dataset-guide-2025-10-16/ko/index.html
@@ -39,87 +39,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <style>
-        body { font-family: 'Noto Sans KR', sans-serif; transition: background-color 0.3s ease, color 0.3s ease; }
-        .fade-in-card{opacity:0;transform:translateY(20px);transition:opacity .6s ease-out,transform .6s ease-out}.fade-in-card.is-visible{opacity:1;transform:translateY(0)}
-        .link-item { transition: color 0.2s ease-in-out; }
 
-        /* Footer Styles - Dark Theme */
-        .pebblous-footer {
-            background-color: #0f172a;
-            color: #94a3b8;
-            position: relative;
-            padding-top: 2rem;
-        }
-
-        /* Short horizontal bar at the top */
-        .pebblous-footer::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 50%;
-            transform: translateX(-50%);
-            width: 80px;
-            height: 2px;
-            background: linear-gradient(90deg, transparent, #F86825 20%, #F86825 80%, transparent);
-            opacity: 0.4;
-            z-index: 1;
-        }
-
-        .footer-border {
-            border-top: none;
-        }
-
-        .footer-heading {
-            color: #e2e8f0;
-        }
-
-        .footer-text {
-            color: #94a3b8;
-        }
-
-        .footer-link {
-            color: #94a3b8;
-            transition: all 0.3s ease;
-            text-decoration: none !important;
-            border-bottom: none !important;
-            position: relative;
-            display: inline-block;
-            padding-bottom: 3px;
-        }
-
-        .footer-link::after {
-            content: '';
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            width: 0;
-            height: 2px;
-            background-color: #F86825;
-            transition: width 0.3s ease;
-        }
-
-        .footer-link:hover {
-            color: #F86825 !important;
-        }
-
-        .footer-link:hover::after {
-            width: 100%;
-        }
-
-        .footer-divider {
-            border-top: 1px solid #1e293b;
-        }
-
-        .footer-social-icon {
-            color: #64748b;
-            transition: color 0.2s;
-        }
-
-        .footer-social-icon:hover {
-            color: #e2e8f0;
-        }
-    </style>
+    <!-- Common Styles -->
+    <link rel="stylesheet" href="/styles/common-styles.css">
 </head>
 <body class="antialiased">
 
@@ -142,12 +64,14 @@
             </div>
 
             <header class="text-center mb-16">
-                <h1 id="page-h1-title" class="text-3xl md:text-4xl font-bold leading-snug"></h1>
-                <div id="page-meta-info" class="mt-4 text-sm">
+                <h1 id="page-h1-title" class="text-4xl md:text-5xl font-bold leading-tight mb-4"></h1>
+                <div id="page-meta-info" class="text-sm mb-6">
                     <span id="publish-date"></span>
                     <span class="mx-2">|</span>
                     <span id="publisher"></span>
                 </div>
+                <!-- Share Buttons Component -->
+                <div id="share-buttons-placeholder" class="mb-8"></div>
                 <div class="mt-10 grid grid-cols-1 md:grid-cols-3 gap-8 text-left">
                     <div class="themeable-card fade-in-card p-6 rounded-xl shadow-lg border hover:-translate-y-2 transition-all duration-300">
                         <div class="flex items-center mb-4">
@@ -539,150 +463,23 @@
         </main>
     </div>
 
+    <!-- Common Utilities -->
+    <script src="/scripts/common-utils.js"></script>
+
     <script>
-        document.addEventListener('DOMContentLoaded', function() {
-		// =================================================================
-		// 'LLM 데이터셋 분석' 페이지를 위한 설정 파일
-		// =================================================================
-		const siteConfig = {
-		    siteURL: "https://blog.pebblous.ai",
-		    pagePath: "/report/llm-dataset-guide-2025-10-16/ko/",
-		    mainTitle: "LLM 학습용 오픈 데이터셋 가이드",
-		    subtitle: "저작권 문제 없는 AI 및 데이터과학 분야를 중심으로",
-		    seoDescription: "어떤 데이터로 LLM을 학습시켜야 할까요? 주요 AI 연구소의 성공 사례를 바탕으로, AI 및 데이터과학 분야에서 상업적 활용이 가능한 대규모 오픈 데이터셋(RedPajama, The Pile, Dolma 등)을 분석하고, LLM 학습을 위한 데이터셋 혼합 전략과 법적 고려사항을 제시합니다.",
-		    seoKeywords: [
-		        "LLM", "데이터셋", "AI 학습 데이터", "오픈 데이터", "기술 문서", "저작권",
-		        "RedPajama", "The Pile", "C4", "Dolma", "FineWeb", "The Stack", "arXiv", "Wikipedia",
-		        "Pebblous", "페블러스", "인공지능", "데이터 과학", "기계학습", "딥러닝"
-		    ],
-		    socialImage: "index.png",
-		    defaultTheme: "dark",
-		    themes: {
-		        dark: {
-		            logoImage: "https://pebblous.github.io/image/Pebblous_BM_White_RGB.png",
-		            background: "#111827", cardBackground: "#1F2937", footerBackground: "#111827",
-		            textColor: "#9CA3AF", headingColor: "#FFFFFF", accentColor: "#F86825", borderColor: "#374151"
-		        },
-		        light: {
-		            logoImage: "https://pebblous.github.io/image/Pebblous_BM_Black_RGB.png",
-		            background: "#F9FAFB", cardBackground: "#FFFFFF", footerBackground: "#F3F4F6",
-		            textColor: "#4B5563", headingColor: "#111827", accentColor: "#F86825", borderColor: "#E5E7EB"
-		        },
-		        beige: {
-		            logoImage: "https://pebblous.github.io/image/Pebblous_BM_Orange_RGB.png",
-		            background: "#FFFBF1", cardBackground: "#FFFFFF", footerBackground: "#FFF3D9",
-		            textColor: "#574523", headingColor: "#3A2E1C", accentColor: "#F86825", borderColor: "#F3E9D3"
-		        }
-		    },
-		    publishDate: "2025년 10월 16일",
-		    publisher: "페블러스 데이터 커뮤니케이션 팀"
-		};
+        document.addEventListener('DOMContentLoaded', async function() {
+            // Page Configuration
+            const config = {
+                mainTitle: "LLM 학습용 오픈 데이터셋 가이드",
+                subtitle: "저작권 문제 없는 AI 및 데이터과학 분야를 중심으로",
+                pageTitle: "LLM 학습용 오픈 데이터셋 가이드: 저작권 문제 없는 AI 및 데이터과학 분야를 중심으로 | Pebblous",
+                publishDate: "2025년 10월 16일",
+                publisher: "페블러스 데이터 커뮤니케이션 팀",
+                defaultTheme: "dark"
+            };
 
-            setupThemeSwitcher(siteConfig.themes, siteConfig.defaultTheme);
-            applyStaticConfig(siteConfig);
-            runApp();
-
-            function setupThemeSwitcher(themes, defaultTheme) {
-                const switcher = document.getElementById('theme-switcher');
-                const themeIcons = { dark: 'M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z', light: 'M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z', beige: 'M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z' };
-                Object.keys(themes).forEach(name => {
-                    const btn = document.createElement('button');
-                    btn.dataset.theme = name;
-                    btn.className = 'p-1 rounded-full transition-colors duration-300';
-                    btn.innerHTML = `<svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="${themeIcons[name]}"></path></svg>`;
-                    btn.onclick = () => applyTheme(themes[name], btn);
-                    switcher.appendChild(btn);
-                });
-                const urlTheme = new URLSearchParams(window.location.search).get('theme');
-                const initialTheme = (urlTheme && themes[urlTheme]) ? urlTheme : defaultTheme;
-                applyTheme(themes[initialTheme], switcher.querySelector(`[data-theme="${initialTheme}"]`));
-            }
-
-            function applyTheme(theme, activeBtn) {
-                document.getElementById('page-logo').src = theme.logoImage;
-                document.body.style.backgroundColor = theme.background;
-                document.body.style.color = theme.textColor;
-                let ss = document.getElementById('dynamic-theme-styles');
-                if (!ss) {
-                    ss = document.createElement("style");
-                    ss.id = 'dynamic-theme-styles';
-                    document.head.appendChild(ss);
-                }
-                ss.innerText = `
-                    .themeable-card { background-color: ${theme.cardBackground}; border-color: ${theme.borderColor}; }
-                    .themeable-heading { color: ${theme.headingColor}; }
-                    .themeable-accent { color: ${theme.accentColor}; }
-                    .themeable-accent-border { border-color: ${theme.accentColor}; }
-                    .themeable-footer { background-color: ${theme.footerBackground}; }
-                    .hover-accent:hover { color: ${theme.accentColor} !important; }
-                    body, .themeable-card p, #page-meta-info, ul, td, .link-item, .themeable-subtitle { color: ${theme.textColor}; }
-                    main h2, table thead, table tbody tr, .border-t, .border-b { border-color: ${theme.borderColor}; }
-                    footer, footer .border-t { border-color: ${theme.borderColor}; }
-                `;
-                document.querySelectorAll('#theme-switcher button').forEach(b => {
-                    b.style.color = theme.textColor;
-                    b.style.backgroundColor = 'transparent';
-                });
-                if(activeBtn) {
-                    activeBtn.style.color = theme.background;
-                    activeBtn.style.backgroundColor = theme.textColor;
-                }
-            }
-
-            function applyStaticConfig(config) {
-                document.getElementById('publish-date').textContent = `발행일: ${config.publishDate}`;
-                document.getElementById('publisher').textContent = `리서치: ${config.publisher}`;
-
-                const pageTitle = `${config.mainTitle}: ${config.subtitle}`;
-                const fullTitle = `${pageTitle} | Pebblous`;
-
-                // document.title = fullTitle; // 이제 HTML에 정적으로 설정됨
-                const h1Element = document.getElementById('page-h1-title');
-                h1Element.innerHTML = `
-                    <span class="block text-5xl md:text-6xl font-bold leading-tight">${config.mainTitle}</span>
-                    <span class="block mt-3 text-xl md:text-3xl font-medium themeable-subtitle">${config.subtitle}</span>
-                `;
-                h1Element.classList.remove('leading-snug');
-
-                // 아래의 메타 태그 설정은 HTML에 정적으로 포함되었으므로 주석 처리하거나 삭제 가능
-                /*
-                const fullURL = config.siteURL + config.pagePath;
-                const fullURL_en = fullURL.replace('/ko/', '/en/');
-                const socialImage = fullURL.replace('/ko/', '/'+config.socialImage)
-                document.getElementById('meta-description').setAttribute('content', config.seoDescription);
-                document.getElementById('meta-keywords').setAttribute('content', config.seoKeywords.join(', '));
-                document.getElementById('hreflang-ko').setAttribute('href', fullURL);
-                document.getElementById('hreflang-en').setAttribute('href', fullURL_en);
-                document.getElementById('hreflang-default').setAttribute('href', fullURL_en);
-                document.getElementById('canonical-url').setAttribute('href', fullURL);
-                document.getElementById('og-url').setAttribute('content', fullURL);
-                document.getElementById('og-title').setAttribute('content', fullTitle);
-                document.getElementById('og-description').setAttribute('content', config.seoDescription);
-                document.getElementById('og-image').setAttribute('content', socialImage);
-                document.getElementById('og-image-width').setAttribute('content', 1200);
-                document.getElementById('og-image-height').setAttribute('content', 630);
-                document.getElementById('twitter-url').setAttribute('content', fullURL);
-                document.getElementById('twitter-title').setAttribute('content', fullTitle);
-                document.getElementById('twitter-description').setAttribute('content', config.seoDescription);
-                document.getElementById('twitter-image').setAttribute('content', socialImage);
-                */
-            }
-
-            function runApp() {
-                // Fade-in animation for cards
-                const fadeInCards = document.querySelectorAll('.fade-in-card');
-                const cardObserver = new IntersectionObserver(entries => {
-                    entries.forEach(entry => {
-                        if (entry.isIntersecting) {
-                            entry.target.classList.add('is-visible');
-                            cardObserver.unobserve(entry.target);
-                        }
-                    });
-                }, { threshold: 0.1 });
-                fadeInCards.forEach(card => {
-                    cardObserver.observe(card);
-                });
-            }
+            // Initialize page with common utilities
+            await PebblousPage.init(config);
         });
     </script>
 
