--- a/index.html
+++ b/index.html
@@ -40,9 +40,8 @@
     <meta name="twitter:image:alt" content="Pebblous Blog - Where Data Becomes Tangible">
 
     <!-- Favicon -->
-    <link rel="icon" href="https://www.pebblous.ai/favicon.ico" sizes="any">
-    <link rel="icon" href="https://www.pebblous.ai/favicon.svg" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="https://www.pebblous.ai/apple-touch-icon.png">
+    <link rel="icon" href="/image/Pebblous_BM_Orange_RGB.png" type="image/png">
+    <link rel="apple-touch-icon" href="/image/Pebblous_BM_Orange_RGB.png">
 
     <!-- JSON-LD Structured Data -->
     <script type="application/ld+json">
