--- a/project/PhysicalAI/data-startup-physical-ai-01.html
+++ b/project/PhysicalAI/data-startup-physical-ai-01.html
@@ -11,6 +11,10 @@
     <meta property="og:url" content="https://blog.pebblous.ai/project/PhysicalAI/data-startup-physical-ai-01.html">
     <title id="page-title">초격차를 위한 마지막 퍼즐: Physical AI와 데이터 중심 AI 스타트업 | Pebblous Blog</title>
 
+    <!-- Favicon -->
+    <link rel="icon" href="/image/Pebblous_BM_Orange_RGB.png" type="image/png">
+    <link rel="apple-touch-icon" href="/image/Pebblous_BM_Orange_RGB.png">
+
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
