--- a/project/AADS/ko/aads-sim-01-terminal.html
+++ b/project/AADS/ko/aads-sim-01-terminal.html
@@ -19,9 +19,9 @@
     <meta name="robots" content="index, follow">
 
     <!-- Favicon -->
-    <link rel="icon" href="https://www.pebblous.ai/favicon.ico" sizes="any">
-    <link rel="icon" href="https://www.pebblous.ai/favicon.svg" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="https://www.pebblous.ai/apple-touch-icon.png">
+    <link rel="icon" href="/image/favicon.ico" sizes="any">
+    <link rel="icon" href="/image/Pebblous_BM_Orange_RGB.png" type="image/png">
+    <link rel="apple-touch-icon" href="/image/Pebblous_BM_Orange_RGB.png">
 
     <!-- Canonical & Alternate URLs -->
     <link rel="canonical" href="https://blog.pebblous.ai/project/AADS/ko/">
