--- a/project/App/text-audit-01.html
+++ b/project/App/text-audit-01.html
@@ -6,9 +6,9 @@
     <title>LLM 학습용 데이터셋 검수기 | 데이터 클리닉 | Pebblous</title>
 
     <!-- Favicon -->
-    <link rel="icon" href="https://www.pebblous.ai/favicon.ico" sizes="any">
-    <link rel="icon" href="https://www.pebblous.ai/favicon.svg" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="https://www.pebblous.ai/apple-touch-icon.png">
+    <link rel="icon" href="/image/favicon.ico" sizes="any">
+    <link rel="icon" href="/image/Pebblous_BM_Orange_RGB.png" type="image/png">
+    <link rel="apple-touch-icon" href="/image/Pebblous_BM_Orange_RGB.png">
 
     <!-- SEO Meta Tags -->
     <meta name="description" content="데이터 클리닉에서 생성한 LLM 학습용 데이터셋을 효율적으로 검수할 수 있는 인터랙티브 뷰어입니다. CSV, Excel, JSON 파일을 업로드하여 중첩된 데이터 구조를 탐색하고, 검수 완료 체크와 코멘트를 기록한 후 타임스탬프가 포함된 파일로 저장할 수 있습니다.">
