--- a/project/CURK/Mini-Project/CURK-2025-09-29/index.html
+++ b/project/CURK/Mini-Project/CURK-2025-09-29/index.html
@@ -32,9 +32,9 @@
     <meta property="twitter:image" content="https://blog.pebblous.ai/project/CURK/Mini-Project/CURK-2025-09-29/image/index.png">
 
     <!-- Favicon -->
-    <link rel="icon" href="https://www.pebblous.ai/favicon.ico" sizes="any">
-    <link rel="icon" href="https://www.pebblous.ai/favicon.svg" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="https://www.pebblous.ai/apple-touch-icon.png">
+    <link rel="icon" href="/image/favicon.ico" sizes="any">
+    <link rel="icon" href="/image/Pebblous_BM_Orange_RGB.png" type="image/png">
+    <link rel="apple-touch-icon" href="/image/Pebblous_BM_Orange_RGB.png">
 
     <!-- Styles and Scripts -->
     <script src="https://cdn.tailwindcss.com"></script>
