--- a/project/CURK/ontology/iso5259-ontology-extraction.html
+++ b/project/CURK/ontology/iso5259-ontology-extraction.html
@@ -22,9 +22,9 @@
     <!-- End Google Tag Manager -->
 
     <!-- Favicon -->
-    <link rel="icon" href="https://www.pebblous.ai/favicon.ico" sizes="any">
-    <link rel="icon" href="https://www.pebblous.ai/favicon.svg" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="https://www.pebblous.ai/apple-touch-icon.png">
+    <link rel="icon" href="/image/favicon.ico" sizes="any">
+    <link rel="icon" href="/image/Pebblous_BM_Orange_RGB.png" type="image/png">
+    <link rel="apple-touch-icon" href="/image/Pebblous_BM_Orange_RGB.png">
 
     <!-- SEO Meta Tags -->
     <title id="page-title">ISO 표준에서 온톨로지 추출하기: ISO/IEC 5259-2 사례 연구 | Pebblous</title>
