--- a/project/CURK/ontology/pdf-navigator.html
+++ b/project/CURK/ontology/pdf-navigator.html
@@ -14,9 +14,9 @@
     <!-- End Google Tag Manager -->
 
     <!-- Favicon -->
-    <link rel="icon" href="https://www.pebblous.ai/favicon.ico" sizes="any">
-    <link rel="icon" type="image/svg+xml" href="https://www.pebblous.ai/favicon.svg">
-    <link rel="apple-touch-icon" href="https://www.pebblous.ai/apple-touch-icon.png">
+    <link rel="icon" href="/image/favicon.ico" sizes="any">
+    <link rel="icon" href="/image/Pebblous_BM_Orange_RGB.png" type="image/png">
+    <link rel="apple-touch-icon" href="/image/Pebblous_BM_Orange_RGB.png">
 
     <!-- SEO Meta Tags -->
     <meta name="description" content="CURK는 ISO/IEC 5259-2 AI 데이터 품질 표준을 인터랙티브하게 탐색하는 온톨로지 기반 도구입니다. 벡터 임베딩에서 지식그래프로, 뉴로-심볼릭 AI를 향한 실용적 접근. 4가지 온톨로지 레이어(품질 특성, 문서 구조, 용어 정의, ISO 메타)와 PDF가 양방향 연동됩니다.">
