--- a/project/DAL/pendulum-particle-pebble/pendulum-particle-pebble-01.html
+++ b/project/DAL/pendulum-particle-pebble/pendulum-particle-pebble-01.html
@@ -55,9 +55,9 @@
     <meta name="twitter:image:alt" content="Pendulum, Particles and Pebbles - Code Painting by mr_lix, Data Art Lab">
 
     <!-- Favicon -->
-    <link rel="icon" href="https://www.pebblous.ai/favicon.ico" sizes="any">
-    <link rel="icon" href="https://www.pebblous.ai/favicon.svg" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="https://www.pebblous.ai/apple-touch-icon.png">
+    <link rel="icon" href="/image/favicon.ico" sizes="any">
+    <link rel="icon" href="/image/Pebblous_BM_Orange_RGB.png" type="image/png">
+    <link rel="apple-touch-icon" href="/image/Pebblous_BM_Orange_RGB.png">
 
     <!-- Google Tag Manager -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
