--- a/project/ISO5259/5259_text_qa.html
+++ b/project/ISO5259/5259_text_qa.html
@@ -2,9 +2,9 @@
 <html lang="ko">
 <head>
     <!-- Favicon -->
-    <link rel="icon" href="https://www.pebblous.ai/favicon.ico" sizes="any">
-    <link rel="icon" href="https://www.pebblous.ai/favicon.svg" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="https://www.pebblous.ai/apple-touch-icon.png">
+    <link rel="icon" href="/image/favicon.ico" sizes="any">
+    <link rel="icon" href="/image/Pebblous_BM_Orange_RGB.png" type="image/png">
+    <link rel="apple-touch-icon" href="/image/Pebblous_BM_Orange_RGB.png">
 
     <!-- SEO Meta Tags (Updated for new content) -->
     <title id="page-title">ISO/IEC 5259 표준 기반 LLM 텍스트 데이터 품질 평가 | Pebblous</title>
