--- a/project/PhysicalAI/data-startup-physical-ai-01.html
+++ b/project/PhysicalAI/data-startup-physical-ai-01.html
@@ -12,6 +12,7 @@
     <title id="page-title">초격차를 위한 마지막 퍼즐: Physical AI와 데이터 중심 AI 스타트업 | Pebblous Blog</title>
 
     <!-- Favicon -->
+    <link rel="icon" href="/image/favicon.ico" sizes="any">
     <link rel="icon" href="/image/Pebblous_BM_Orange_RGB.png" type="image/png">
     <link rel="apple-touch-icon" href="/image/Pebblous_BM_Orange_RGB.png">
 
