--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     <meta name="twitter:image:alt" content="Pebblous Blog - Where Data Becomes Tangible">
 
     <!-- Favicon -->
+    <link rel="icon" href="/image/favicon.ico" sizes="any">
     <link rel="icon" href="/image/Pebblous_BM_Orange_RGB.png" type="image/png">
     <link rel="apple-touch-icon" href="/image/Pebblous_BM_Orange_RGB.png">
 
