--- a/project/CURK/ontology/palantir-vs-classic-ontology.html
+++ b/project/CURK/ontology/palantir-vs-classic-ontology.html
@@ -22,9 +22,9 @@
     <!-- End Google Tag Manager -->
 
     <!-- Favicon -->
-    <link rel="icon" href="https://www.pebblous.ai/favicon.ico" sizes="any">
-    <link rel="icon" href="https://www.pebblous.ai/favicon.svg" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="https://www.pebblous.ai/apple-touch-icon.png">
+    <link rel="icon" href="/image/favicon.ico" sizes="any">
+    <link rel="icon" href="/image/Pebblous_BM_Orange_RGB.png" type="image/png">
+    <link rel="apple-touch-icon" href="/image/Pebblous_BM_Orange_RGB.png">
 
     <!-- SEO Meta Tags -->
     <title id="page-title">팔란티어 vs 전통 온톨로지: 40년의 진화 | Pebblous</title>
