pdf link update

--- a/project/PhysicalAI/data-pipeline-for-physical-ai-01.html
+++ b/project/PhysicalAI/data-pipeline-for-physical-ai-01.html
@@ -1141,7 +1141,7 @@
                         <p class="themeable-muted mb-6">
                             본 콘텐츠의 전체 내용을 PDF 형식으로 다운로드하여 오프라인에서도 열람하실 수 있습니다.
                         </p>
-                        <a href="/project/PhysicalAI/Physical AI 시대의 도래: 제조 혁신을 위한 데이터 전략 리포트.pdf"
+                        <a href="/project/PhysicalAI/Physical%20AI%20%EC%8B%9C%EB%8C%80%EC%9D%98%20%EB%8F%84%EB%9E%98%20%EC%A0%9C%EC%A1%B0%20%ED%98%81%EC%8B%A0%EC%9D%84%20%EC%9C%84%ED%95%9C%20%EB%8D%B0%EC%9D%B4%ED%84%B0%20%EC%A0%84%EB%9E%B5%20%EB%A6%AC%ED%8F%AC%ED%8A%B8.pdf"
                            download
                            class="inline-flex items-center gap-2 px-6 py-3 rounded-lg font-bold text-white transition-all hover:scale-105"
                            style="background: linear-gradient(135deg, #F86825, #FF8C42);">
